Work with fixed-size mantissa instead of variable size strings

--- a/c/Makefile
+++ b/c/Makefile
@@ -60,6 +60,6 @@ astyle:
 	astyle bignum.c bignum.h
 
 clean:
-	$(RM) bignum$(EXE) $(OBJS) $(DEPENDS)
+	$(RM) bignum$(EXE) $(OBJS) $(DEPENDS) *.bak *~
 
 -include $(DEPENDS)
